# approval-app

./: pyproject.toml
src/approval_app/: main.py
uploads/: 1.csv
