[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "approval-app"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "nicegui"
]

[project.optional-dependencies] 
test = ["pytest>=6.0"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


